data preprocesing poprawione do kolumn z best subset

--- a/training_of_price_predictive_model_with_data_from_relevant_periods/prototyping.ipynb
+++ b/training_of_price_predictive_model_with_data_from_relevant_periods/prototyping.ipynb
@@ -45,6 +45,7 @@
     }
    },
    "source": [
+    "import columns\n",
     "!pip install -U keras-tuner\n"
    ],
    "outputs": [
@@ -665,8 +666,8 @@
     },
     "id": "dcca38f4",
     "ExecuteTime": {
-     "end_time": "2025-10-22T16:15:30.600553Z",
-     "start_time": "2025-10-22T16:15:29.352584Z"
+     "end_time": "2025-10-28T18:34:04.637115Z",
+     "start_time": "2025-10-28T18:34:03.917096Z"
     }
    },
    "source": [
@@ -674,79 +675,48 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "# Load dataset\n",
-    "file_path = \"/Users/filiporlikowski/Documents/EngeneeringProject/training_of_price_predictive_model_with_data_from_relevant_periods/merged_dataset_with_org_cat_values.csv\"\n",
+    "file_path = \"merged_dataset_with_org_cat_values.csv\"\n",
     "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Columns to keep\n",
+    "selected_features = [\n",
+    "    'squareMeters', 'rooms', 'floorCount', 'buildYear',\n",
+    "    'longitude', 'centreDistance', 'poiCount',\n",
+    "    'distance_to_train_1', 'distance_to_train_3', 'distance_to_primary_2'\n",
+    "]\n",
     "\n",
     "# Define target and features\n",
     "y = df['price']\n",
-    "X = df.drop(columns=['price', 'id', 'date'])  # drop non-predictive columns\n",
-    "\n",
-    "# Columns info\n",
-    "categorical_columns = ['city', 'type', 'ownership', 'buildingMaterial', 'condition']\n",
-    "yes_no_columns = ['hasParkingSpace', 'hasBalcony', 'hasElevator', 'hasSecurity', 'hasStorageRoom']\n",
+    "X = df[selected_features].copy()  # only keep selected columns\n",
     "\n",
     "# Split first to avoid data leakage\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n",
     "\n",
     "# ----- NUMERIC IMPUTATION -----\n",
-    "numeric_cols = X_train.select_dtypes(include=[np.number]).columns.tolist()\n",
     "num_imputer = SimpleImputer(strategy='median')\n",
-    "X_train[numeric_cols] = num_imputer.fit_transform(X_train[numeric_cols])\n",
-    "X_test[numeric_cols] = num_imputer.transform(X_test[numeric_cols])\n",
+    "X_train = pd.DataFrame(num_imputer.fit_transform(X_train), columns=X_train.columns)\n",
+    "X_test = pd.DataFrame(num_imputer.transform(X_test), columns=X_test.columns)\n",
     "\n",
-    "# ----- CATEGORICAL IMPUTATION -----\n",
-    "cat_imputer = SimpleImputer(strategy='constant', fill_value='missing')\n",
-    "X_train[categorical_columns] = cat_imputer.fit_transform(X_train[categorical_columns])\n",
-    "X_test[categorical_columns] = cat_imputer.transform(X_test[categorical_columns])\n",
-    "\n",
-    "# ----- YES/NO MAPPING -----\n",
-    "for col in yes_no_columns:\n",
-    "    if col in X_train.columns:\n",
-    "        X_train[col] = X_train[col].map({'yes': 1, 'no': 0}).fillna(0)\n",
-    "        X_test[col] = X_test[col].map({'yes': 1, 'no': 0}).fillna(0)\n",
-    "\n",
-    "# ----- LABEL ENCODING CATEGORICALS -----\n",
-    "label_encoders = {}\n",
-    "for col in categorical_columns:\n",
-    "    le = LabelEncoder()\n",
-    "    X_train[col] = le.fit_transform(X_train[col])\n",
-    "    X_test[col] = le.transform(X_test[col])  # apply same mapping\n",
-    "    label_encoders[col] = le\n",
-    "\n",
-    "# Now X_train, X_test, y_train, y_test are ready for modeling\n",
-    "print(\"Train shape:\", X_train.columns)\n",
-    "print(\"Test shape:\", X_test.shape)\n"
+    "print(\"Train columns:\", X_train.columns.tolist())\n",
+    "print(\"Train shape:\", X_train.shape)\n",
+    "print(\"Test shape:\", X_test.shape)"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train shape: Index(['city', 'type', 'squareMeters', 'rooms', 'floor', 'floorCount',\n",
-      "       'buildYear', 'latitude', 'longitude', 'centreDistance', 'poiCount',\n",
-      "       'schoolDistance', 'clinicDistance', 'postOfficeDistance',\n",
-      "       'kindergartenDistance', 'restaurantDistance', 'collegeDistance',\n",
-      "       'pharmacyDistance', 'ownership', 'buildingMaterial', 'condition',\n",
-      "       'hasParkingSpace', 'hasBalcony', 'hasElevator', 'hasSecurity',\n",
-      "       'hasStorageRoom', 'distance_to_shopping_1', 'distance_to_shopping_2',\n",
-      "       'distance_to_shopping_3', 'distance_to_green_1', 'distance_to_green_2',\n",
-      "       'distance_to_green_3', 'distance_to_train_1', 'distance_to_train_2',\n",
-      "       'distance_to_train_3', 'distance_to_highschools_and_1',\n",
-      "       'distance_to_highschools_and_2', 'distance_to_highschools_and_3',\n",
-      "       'distance_to_tram_and_bus_1', 'distance_to_tram_and_bus_2',\n",
-      "       'distance_to_tram_and_bus_3', 'distance_to_cultural_and_1',\n",
-      "       'distance_to_cultural_and_2', 'distance_to_cultural_and_3',\n",
-      "       'distance_to_primary_1', 'distance_to_primary_2',\n",
-      "       'distance_to_primary_3'],\n",
-      "      dtype='object')\n",
-      "Test shape: (35333, 47)\n"
+      "Train columns: ['squareMeters', 'rooms', 'floorCount', 'buildYear', 'longitude', 'centreDistance', 'poiCount', 'distance_to_train_1', 'distance_to_train_3', 'distance_to_primary_2']\n",
+      "Train shape: (141330, 10)\n",
+      "Test shape: (35333, 10)\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
